--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "experimentalDecorators": true,
     "allowJs": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "alwaysStrict": true,
     "noImplicitAny": true,
     "noUnusedLocals": true,
@@ -44,8 +44,7 @@
   "include": [
     "src/**/*",
     "test/**/*",
-    "config/**/*",
-    "typings/**/*.d.ts"
+    "config/**/*"
   ],
   "exclude": [
     "node_modules/**"
