--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.1",
   "description": "Voiceflow frontend project",
   "main": "build/index.js",
+  "homepage": ".",
   "scripts": {
     "clean": "rimraf build",
-    "start": "react-scripts start",
+    "start": "yarn run build:css && react-scripts start",
+    "build": "yarn run build:css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:css": "npx tailwindcss -i ./src/index.css -o ./src/App.css",
+    "watch:css": "npx tailwindcss -i ./src/index.css -o ./src/App.css --watch"
   },
   "repository": {
     "type": "git",
@@ -25,14 +29,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/lodash": "^4.14.186",
     "@types/react-router-dom": "^5.1.7",
     "@voiceflow/general-types": "^1.50.3",
     "axios": "^0.21.1",
+    "local-storage": "^2.0.0",
+    "lodash": "^4.17.21",
+    "postcss-cli": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "use-sound": "^4.0.1",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -46,9 +55,13 @@
     "@voiceflow/stylelint-config": "^1.0.0",
     "@voiceflow/tsconfig": "^1.0.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
+    "autoprefixer": "^10.4.12",
+    "create-react-app": "^5.0.1",
     "eslint": "^7.27.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.2.1",
     "prettier-stylelint": "^0.4.2",
+    "tailwindcss": "^3.2.1",
     "ttypescript": "^1.5.12",
     "typescript": "^4.1.3"
   },
@@ -58,7 +71,6 @@
   "bugs": {
     "url": "https://github.com/voiceflow/frontend-project/issues"
   },
-  "homepage": "https://github.com/voiceflow/frontend-project/#readme",
   "browserslist": {
     "production": [
       ">0.2%",
