--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/lodash": "^4.14.186",
     "@types/react-router-dom": "^5.1.7",
-    "@voiceflow/general-types": "^1.50.3",
+    "@voiceflow/general-types": "1.50.4",
     "axios": "^0.21.1",
     "local-storage": "^2.0.0",
     "lodash": "^4.17.21",
